BugzID: #47248 - fix campaign spacing

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -2948,7 +2948,7 @@ l div.addthis_toolbox a.addthis_button_google_plusone,.node-type-openpublish-pho
 }
 
 body.node-type-takepart-campaign #highlighted {
-    padding: 25px 0;
+    padding: 25px 0 0 0;
 }
 
 .multipage-campaign #highlighted {
